[project]
name = "chirp-feedback-board"
version = "0.1.0"
description = "A one-click feedback and roadmap board powered by Chirp and PostgreSQL"
requires-python = ">=3.14"
dependencies = [
  "bengal-chirp[data-pg,sessions]>=0.10,<0.11",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.0",
  "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "issue(number): GitHub issue acceptance traceability",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
